src/objects/MMMGRSVC__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Plan Manager Services</description>
    <fields>
        <fullName>COLLECTIVE__c</fullName>
        <label>Collective Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_Desc__c</fullName>
        <formula>IF( COLLECTIVE__c =&quot;000&quot;,&quot;Unspecified&quot;,
IF( COLLECTIVE__c =&quot;001&quot;,&quot;Common Collective Trust&quot;,
IF( COLLECTIVE__c =&quot;002&quot;,&quot;Exchange-Traded Fund&quot;,
IF( COLLECTIVE__c =&quot;004&quot;,&quot;Mutual Fund&quot;,
IF( COLLECTIVE__c =&quot;005&quot;,&quot;Pooled Separate Account&quot;,
IF( COLLECTIVE__c =&quot;007&quot;,&quot;Unit Trust&quot;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANAGER_NO__c</fullName>
        <label>Manager MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Plan_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MMD Plan Manager</label>
        <referenceTo>MMMGR__c</referenceTo>
        <relationshipLabel>Manager Services</relationshipLabel>
        <relationshipName>MMD_Manager_Services_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REGION__c</fullName>
        <label>Region Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Desc__c</fullName>
        <label>Region Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STYLE__c</fullName>
        <label>Style Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Desc__c</fullName>
        <label>Style Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Desc__c</fullName>
        <formula>CASE( TYPE__c,
&quot;001&quot;,&quot;Alternatives&quot;,
&quot;002&quot;,&quot;Asset Allocation&quot;,
&quot;004&quot;,&quot;Cash &amp; Short-Term&quot;,
&quot;005&quot;,&quot;Equities&quot;,
&quot;006&quot;,&quot;Fixed Income&quot;,
&quot;008&quot;,&quot;Loans&quot;,
&quot;009&quot;,&quot;Self Directed Brokerage Accounts&quot;,
&quot;014&quot;,&quot;Real Estate&quot;,
&quot;000&quot;,&quot;Unspecified&quot;,TYPE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>MMD Manager Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Manager Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>